<resources>
    <string name="app_name">등산왕</string>
    <string name="title_tracking">등산</string>
    <string name="title_achievement">업적</string>
    <string name="title_mountain">산 정보</string>
    <string name="tl_achievement_category_total">전체</string>
    <string name="tl_achievement_category_complete">달성</string>
    <string name="tl_achievement_category_incomplete">미달성</string>
    <string name="tv_achievement_complete_date">달성일:</string>
    <string name="iv_achievement_item_thumbnail_description">업적 이미지</string>
    <string name="iv_achievement_item_share_description">공유하기</string>
    <string name="tv_achievement_item_progress_text">%s/%s</string>
    <string name="title_start_tracking">등산 시작</string>
    <string name="title_stop_tracking">등산 종료</string>
    <string name="title_tracking_history">등산 기록</string>
    <string name="title_confirm_tracking_history">등산 기록 확인</string>
    <string name="title_time">시간</string>
    <string name="title_distance">거리</string>
    <string name="title_date">날짜</string>
    <string name="title_show_altitude_graph">그래프 보기</string>
    <string name="title_altitude_graph_per_time">시간별 고도 그래프</string>
    <string name="check_delete_tracking_history">등산 기록을 지우시겠습니까?</string>
    <string name="title_polyline">경로</string>
    <string name="permission_rationale">세부 위치 정보 권한 제공에 동의해야 등산 기록이 가능합니다</string>
    <string name="ok">동의</string>
    <string name="settings">설정</string>
    <string name="mountain_name_search">산 이름 입력</string>
    <string name="cancel">취소</string>
    <string name="mountain_image">산 사진</string>
    <string name="details">자세히 보기 ▶</string>
    <string name="tv_mountain_detail_label">산 소개</string>
    <string name="tv_mountain_detail_tour_label">관광 정보</string>
    <string name="tv_mountain_detail_transportation_label">교통 정보</string>
    <string name="current_location_button">현재 위치 버튼</string>
    <string name="delete_button">삭제 버튼</string>
    <string name="history_button">등산 기록 목록 버튼</string>
    <string name="weather_image">날씨 이미지</string>
    <string name="save_fail">유효하지 않은 기록이라 저장되지 않았습니다</string>
    <string name="save_success">기록이 저장되었습니다</string>
    <string name="steps">걸음 수</string>
    <string name="select_map">지도 모드</string>
    <string name="radio_normal">일반 지도</string>
    <string name="radio_satellite">위성 지도</string>
    <string name="radio_hybrid">하이브리드 지도</string>
    <string name="open_source_licence">오픈 소스 라이선스</string>
    <string name="slash">/</string>
    <string name="achievement_status">업적 현황</string>
    <string name="achievement_score">업적 점수</string>
    <string name="no_history">등산 기록이 아직 없습니다!\n등산을 하며 목록을 채워보세요.</string>
    <string name="time">시간</string>
</resources>