<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false">

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/btn_type_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:buttonTint="@color/mountain_blue"
        android:checked="true"
        android:fontFamily="@font/gmarket_sans_medium"
        android:text="@string/radio_normal" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/btn_type_satellite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:buttonTint="@color/mountain_blue"
        android:fontFamily="@font/gmarket_sans_medium"
        android:text="@string/radio_satellite" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/btn_type_hybrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/mountain_blue"
        android:fontFamily="@font/gmarket_sans_medium"
        android:text="@string/radio_hybrid" />

</RadioGroup>