<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.boostcamp.mountainking.ui.achievement.AchievementViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.achievement.AchievementFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/av_lottie_trophy"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            app:lottie_fileName="trophy_lottie.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tl_achievement_category"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_achievement"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/av_lottie_trophy"
            app:layout_constraintStart_toEndOf="@id/av_lottie_trophy"
            app:layout_constraintBottom_toBottomOf="@id/av_lottie_trophy"
            style="@style/header"/>

        <TextView
            android:id="@+id/tv_default_achievement_complete_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/achievement_status"
            android:fontFamily="@font/gmarket_sans_medium"
            app:layout_constraintTop_toTopOf="@id/tv_achievement_complete_count"
            app:layout_constraintEnd_toStartOf="@id/tv_achievement_complete_count"/>

        <TextView
            android:id="@+id/tv_achievement_complete_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gmarket_sans_bold"
            app:layout_constraintTop_toTopOf="@id/tv_slash"
            app:layout_constraintEnd_toStartOf="@id/tv_slash"
            tools:text="12" />

        <TextView
            android:id="@+id/tv_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:textColor="@color/black"
            android:fontFamily="@font/gmarket_sans_bold"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@id/tv_achievement_total_count"
            app:layout_constraintTop_toTopOf="@id/tv_achievement_total_count"/>

        <TextView
            android:id="@+id/tv_achievement_total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gmarket_sans_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/av_lottie_trophy"
            tools:text="300"/>

        <TextView
            android:id="@+id/tv_default_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievement_score"
            android:fontFamily="@font/gmarket_sans_medium"
            app:layout_constraintTop_toTopOf="@id/tv_achievement_score"
            app:layout_constraintEnd_toEndOf="@id/tv_default_achievement_complete_count"/>

        <TextView
            android:id="@+id/tv_achievement_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gmarket_sans_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_achievement_total_count"
            tools:text="1230" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_achievement_category"
            style="@style/body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/av_lottie_trophy"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                style="@style/body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tl_achievement_category_total" />

            <com.google.android.material.tabs.TabItem
                style="@style/body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tl_achievement_category_complete" />

            <com.google.android.material.tabs.TabItem
                style="@style/body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tl_achievement_category_incomplete" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_achievement_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_achievement_category"
            tools:listitem="@layout/item_achievement" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
