<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tracking">

    <fragment
        android:id="@+id/navigation_tracking"
        android:name="com.boostcamp.mountainking.ui.tracking.TrackingFragment"
        android:label="@string/title_tracking"
        tools:layout="@layout/fragment_tracking">
        <action
            android:id="@+id/action_navigation_tracking_to_mountainSelectFragment"
            app:destination="@id/mountainSelectFragment" />
        <action
            android:id="@+id/action_tracking_to_history"
            app:destination="@id/navigation_history" />
    </fragment>

    <fragment
        android:id="@+id/navigation_achievement"
        android:name="com.boostcamp.mountainking.ui.achievement.AchievementFragment"
        android:label="@string/title_achievement"
        tools:layout="@layout/fragment_achievement" />

    <fragment
        android:id="@+id/navigation_mountain"
        android:name="com.boostcamp.mountainking.ui.mountain.MountainFragment"
        android:label="@string/title_mountain"
        tools:layout="@layout/fragment_mountain">
        <action
            android:id="@+id/action_navigation_mountain_to_mountainListFragment"
            app:destination="@id/mountainListFragment">
            <argument
                android:name="city"
                app:argType="string" />
        </action>

    </fragment>

    <dialog
        android:id="@+id/mountainSelectFragment"
        android:name="com.boostcamp.mountainking.ui.tracking.MountainSelectFragment"
        android:label="MountainSelectFragment"
        tools:layout="@layout/fragment_mountain_select" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.boostcamp.mountainking.ui.tracking.history.HistoryFragment"
        android:label="fragment_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_history_to_tracking"
            app:destination="@id/navigation_tracking"
            app:popUpTo="@id/navigation_tracking"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/mountainListFragment"
        android:name="com.boostcamp.mountainking.ui.mountain.MountainListFragment"
        android:label="MountainListFragment" />

</navigation>