<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="tracking"
            type="com.boostcamp.mountainking.entity.Tracking" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.tracking.history.HistoryDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_history_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_history_details_toolbar_title"
                    style="@style/body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="등산 기록" />
            </androidx.appcompat.widget.Toolbar>
            <RadioGroup
                android:id="@+id/rg_map_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tb_history_details">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/btn_type_normal"
                    android:text="@string/radio_normal"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:checked="true"
                    android:buttonTint="@color/mountain_blue"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/btn_type_satellite"
                    android:text="@string/radio_satellite"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:layout_marginEnd="10dp"
                    android:buttonTint="@color/mountain_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/btn_type_hybrid"
                    android:text="@string/radio_hybrid"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:buttonTint="@color/mountain_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

            <com.naver.maps.map.MapView
                android:id="@+id/mv_naver"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_map_type"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_stroke"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="@id/mv_naver"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_default_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_date"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:layout_margin="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_date"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{tracking.date}"
                    android:fontFamily="@font/gmarket_sans_bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="2021.11.01"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_default_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_distance"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@id/tv_default_date"
                    app:layout_constraintTop_toBottomOf="@id/tv_default_date" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@{tracking.distance}"
                    android:fontFamily="@font/gmarket_sans_bold"
                    app:layout_constraintStart_toStartOf="@id/tv_date"
                    app:layout_constraintTop_toBottomOf="@id/tv_default_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="200 m"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/title_polyline"
                    android:fontFamily="@font/gmarket_sans_medium"
                    app:layout_constraintStart_toStartOf="@id/tv_default_date"
                    app:layout_constraintTop_toBottomOf="@id/tv_default_distance"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <View
                    android:layout_width="30dp"
                    android:layout_height="5dp"
                    android:background="@drawable/shape_polyline_blue"
                    app:layout_constraintStart_toStartOf="@id/tv_date"
                    app:layout_constraintTop_toBottomOf="@id/tv_distance"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/lo_bottom_sheet"
            layout="@layout/fragment_bottom_sheet"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>