<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="tracking"
            type="com.boostcamp.mountainking.entity.Tracking" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_mountain_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{tracking.mountainName}"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_default_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_time"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_mountain_name"
            app:layout_constraintTop_toBottomOf="@id/tv_mountain_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_default_time"
            app:layout_constraintTop_toBottomOf="@id/tv_mountain_name"/>

        <TextView
            android:id="@+id/tv_default_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_distance"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_default_time"
            app:layout_constraintTop_toBottomOf="@id/tv_default_time"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@{tracking.length}"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_default_distance"
            app:layout_constraintTop_toBottomOf="@id/tv_default_time"/>

        <TextView
            android:id="@+id/tv_default_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_date"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_default_distance"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_default_date"
            app:layout_constraintTop_toBottomOf="@id/tv_default_distance"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/round_stroke"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_default_date"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>